[Upstream][Semi-Modular] RND Resprite (#126)
* Респрайтит научный отдел!!

* Фиксы

--- a/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
@@ -240,6 +240,7 @@
       - id: BoxEncryptionKeyScience
       - id: ClothingHeadsetAltScience
       - id: EncryptionKeyBinary
+      - id: ClothingUniformJumpsuitRDTurtleNeck  #Imperial edit
 
 - type: entity
   id: LockerResearchDirectorFilled
@@ -258,6 +259,7 @@
       - id: BoxEncryptionKeyScience
       - id: ClothingHeadsetAltScience
       - id: EncryptionKeyBinary
+      - id: ClothingUniformJumpsuitRDTurtleNeck  #Imperial edit
 
 - type: entity
   id: LockerHeadOfSecurityFilledHardsuit
