--- a/Resources/Prototypes/Catalog/Fills/Lockers/science.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/science.yml
@@ -5,7 +5,8 @@
   components:
   - type: StorageFill
     contents:
-      - id: ClothingHandsGlovesLatex
+      - id: ClothingHandsGlovesLatexLong #Imperial edit
+      - id: ClothingHeadHelmetScienceMask #Imperial edit
       - id: ClothingHeadsetScience
       - id: ClothingMaskSterile
       - id: ClothingOuterCoatRnd
