--- a/Resources/Prototypes/Catalog/Fills/Lockers/medical.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/medical.yml
@@ -123,6 +123,7 @@
       - id: ClothingMaskSterile
       - id: HandLabeler
         prob: 0.5
+      - id: ClothingHeadHelmetScienceMask #Imperial edit
 
 - type: entity
   id: LockerParamedicFilled
