--- a/Resources/Prototypes/Catalog/Fills/Crates/security.yml
+++ b/Resources/Prototypes/Catalog/Fills/Crates/security.yml
@@ -35,6 +35,8 @@
       - id: BoxFlashbang
       - id: Flash
         amount: 3
+      - id: EnergyBola # Imperial Space / Энерго-болы. @KAZAK1984
+        amount: 3
 #      - Pepperspray
 #      - GrenadeTeargas
 
