--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -714,6 +714,7 @@
       - Signaller
       - SignalTrigger
       - TelescopicShield
+      - EnergyBola # Imperial Space / Энерго-болы. @KAZAK1984
       - TimerTrigger
       - Truncheon
       - VoiceTrigger
