--- a/Resources/Prototypes/Imperial/ErtCall/clothing.yml
+++ b/Resources/Prototypes/Imperial/ErtCall/clothing.yml
@@ -199,15 +199,13 @@
 
 #DEAD SQUAD START
 - type: entity
-  parent: ClothingBackpack
+  parent: ClothingBackpackERTSecurity
   id: ClothingBackpackDeadSquadSecurity
   name: Dead squad backpack
   description: You don't have to know whose backpack it is.
   components:
   - type: Sprite
     sprite: Clothing/Back/Backpacks/deadsquad.rsi
-  - type: Storage
-    capacity: 250
 
 - type: entity
   noSpawn: false
