--- a/Resources/Prototypes/Imperial/Sona/PDA/PDA.yml
+++ b/Resources/Prototypes/Imperial/Sona/PDA/PDA.yml
@@ -5,18 +5,31 @@
   suffix: S-o.N.A
   description: A beautiful and advanced PDA of S-o.N.A. AI Dynamics Corporation.
   components:
-    - type: Item
-      size: Small
-    - type: Pda
-      id: SonaIDCard
-      state: pda-sona
-    - type: Icon
-      state: pda-sona
-    - type: PdaBorderColor
-      borderColor: "#f2f2f2"
-      accentHColor: "#00f1f5"
-      accentVColor: "#00f1f5"
-    - type: HealthAnalyzer
-      scanDelay: 0
-      scanningEndSound:
-        path: "/Audio/Items/Medical/healthscanner.ogg"
+  - type: Sprite
+    sprite: Imperial/customPDA.rsi
+    layers:
+    - map: [ "enum.PdaVisualLayers.Base" ]
+    - state: "light_overlay"
+      map: [ "enum.PdaVisualLayers.Flashlight" ]
+      shader: "unshaded"
+      visible: false
+    - state: "id_overlay"
+      map: [ "enum.PdaVisualLayers.IdLight" ]
+      shader: "unshaded"
+      visible: false
+  - type: Item
+    size: Small
+  - type: Pda
+    id: SonaIDCard
+    state: pda-sona
+  - type: Icon
+    sprite: Imperial/customPDA.rsi
+    state: pda-sona
+  - type: PdaBorderColor
+    borderColor: "#f2f2f2"
+    accentHColor: "#00f1f5"
+    accentVColor: "#00f1f5"
+  - type: HealthAnalyzer
+    scanDelay: 0
+    scanningEndSound:
+      path: "/Audio/Items/Medical/healthscanner.ogg"
