--- a/Resources/Prototypes/Objectives/stealTargetGroups.yml
+++ b/Resources/Prototypes/Objectives/stealTargetGroups.yml
@@ -244,7 +244,7 @@
 
 - type: stealTargetGroup
   id: SalvageShuttleConsoleCircuitboard
-  name: salvage shuttle console board
+  name: консоль управления утилизаторским шаттлом
   sprite:
     sprite: Objects/Misc/module.rsi
     state: cpuboard
