TFG works2 (upstream) (#170)
* TFG works

Added golden caviar
Returned animation for golden pizza and slise of them
Added flavor for golden pizza and caviar
Returned Imperial sprite for Maid Uniform
Fix grids and inventory space for proto in TFG
Change proto in ShuttleStuff using new amenties

* Some fix part 2

DeliciousPresentableRag replased by PresentableRag
"Winter box" has been deleted
migration.yml suplemented by "Delicasy rag" and "Winter box"
    to avoid errors.
Fixed "open" state for one toolbox sprite.

* Work with Toughguys.

Replaced Toughguys in TFG folder.
Rebasement all Toughguys parent prototype.
Fix problem with Toughguys inventory and size.
Lit fix in translate.
Lit changes in GIFT Toughguys.
File "migration.yml" was suplemented.

--- a/Resources/Prototypes/Entities/Clothing/Uniforms/jumpskirts.yml
+++ b/Resources/Prototypes/Entities/Clothing/Uniforms/jumpskirts.yml
@@ -647,9 +647,9 @@
   description: For professionals, not the posers.
   components:
   - type: Sprite
-    sprite: Clothing/Uniforms/Jumpskirt/janimaid.rsi
+    sprite: Imperial/TFG/NewMaidClothing/maidDress.rsi #Imperial sprite
   - type: Clothing
-    sprite: Clothing/Uniforms/Jumpskirt/janimaid.rsi
+    sprite: Imperial/TFG/NewMaidClothing/maidDress.rsi #Imperial sprite
 
 - type: entity
   parent: ClothingUniformSkirtBase
