--- a/Resources/Prototypes/Imperial/TFG/GoldenLife/delicacy.yml
+++ b/Resources/Prototypes/Imperial/TFG/GoldenLife/delicacy.yml
@@ -13,6 +13,8 @@
     flavors:
     - food
     - creamy
+  - type: StaticPrice
+    price: 10000
 
 - type: entity
   id: FoodPresentableTinMRECaviarTrash
@@ -25,25 +27,37 @@
 
 # Edible rag
 - type: entity
-  id: DeliciousPresentableRag
-  parent: PresentableRag
+  id: PresentableRag
+  parent: BaseItem
   name: delicious rag
   description: A delicacy for representatives of the moth race!
   components:
+  - type: Sprite
+    sprite: Imperial/TFG/GoldenLife/presentableRag.rsi
+    state: HQrag
   - type: Item
+    sprite: Imperial/TFG/GoldenLife/presentableRag.rsi
+    state: HQrag
     size: Small
   - type: Food
     requiresSpecialDigestion: true
-  - type: SolutionContainerManager
-    solutions:
-      food:
-        maxVol: 40
-        reagents:
-        - ReagentId: Fiber
-          Quantity: 40
   - type: Tag
     tags:
     - ClothMade
+  - type: Butcherable
+    butcheringType: Knife
+    spawned:
+    - id: MaterialDurathread1
+      amount: 1
+  - type: SolutionContainerManager
+    solutions:
+      food:
+        maxVol: 10
+        reagents:
+        - ReagentId: Fiber
+          Quantity: 10
+  - type: StaticPrice
+    price: 499
 #Edible rag END
 
 # Golden Pizza
@@ -59,10 +73,11 @@
     - state: goldenPizza
   - type: FlavorProfile
     flavors:
-      - metallic
-      - food
+      - gold-pizza
   - type: SliceableFood
     slice: FoodPizzaGoldenSlice
+  - type: StaticPrice
+    price: 888
 
 - type: entity
   id: FoodPizzaGoldenSlice
@@ -72,10 +87,75 @@
   components:
   - type: FlavorProfile
     flavors:
-      - metallic
-      - food
+      - gold-pizza
   - type: Sprite
     sprite: Imperial/TFG/GoldenLife/goldenPizza.rsi
     layers:
     - state: goldenPizzaSlice
+  - type: StaticPrice
+    price: 111
 #Golden Pizza END
+
+#Golden Caviar
+- type: entity
+  id: FoodCaviarGolden
+  parent: FoodBase
+  name: golden caviar
+  description: Texture like edible balls of gold. Crumbly and aromatic. Brought directly from planet Earth, where it was obtained in an ancient ritual of fair hunting for albino sturgeon.
+  components:
+  - type: Sprite
+    sprite: Imperial/TFG/GoldenLife/goldenCaviar.rsi
+    state: caviar
+  - type: SolutionContainerManager
+    solutions:
+      food:
+        maxVol: 20
+        reagents:
+        - ReagentId: Nutriment
+          Quantity: 20
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 50
+      behaviors:
+      - !type:DoActsBehavior
+        acts: [ "Destruction" ]
+  - type: Item
+    sprite: Imperial/TFG/GoldenLife/goldenCaviar.rsi
+    size: Tiny
+  - type: Food
+    trash: CaviarBowlEmpty
+  - type: FlavorProfile
+    flavors:
+    - gold-caviar
+  - type: StaticPrice
+    price: 5000
+
+- type: entity
+  id: CaviarBowlEmpty
+  parent: BaseItem
+  name: empty caviar bowl
+  description: This bowl from caviar is now empty. Sadly.
+  suffix: Empty
+  components:
+  - type: Sprite
+    sprite: Imperial/TFG/GoldenLife/goldenCaviar.rsi
+    state: empty
+  - type: Item
+    sprite: Imperial/TFG/GoldenLife/goldenCaviar.rsi
+    size: Tiny
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 50
+      behaviors:
+      - !type:DoActsBehavior
+        acts: [ "Destruction" ]
+  - type: Tag
+    tags:
+    - Trash
+  - type: StaticPrice
+    price: 499
+#Golden Caviar END
