--- a/Resources/Prototypes/Imperial/TFG/Representative/ShuttleStuff.yml
+++ b/Resources/Prototypes/Imperial/TFG/Representative/ShuttleStuff.yml
@@ -1,26 +1,17 @@
 - type: entity
-  id: WinterBox
-  parent: BoxCardboard
-  name: wintersuit box
-  description: A box with special insulated suit for big shot.
-  components:
-  - type: StorageFill
-    contents:
-      - id: ClothingOuterWinterCentcom
-      - id: ClothingNeckScarfStripedCentcom
-      - id: ClothingShoesBootsWinter
-
-- type: entity
   id: CCShuttleDresser
   parent: Dresser
   description: Contains the things of an big shot.
   suffix: Filled, CentCom
   components:
   - type: Storage
-    capacity: 50
+    grid:
+    - 0,0,4,4
   - type: StorageFill
     contents:
-      - id: WinterBox
+      - id: ClothingOuterWinterCentcom
+      - id: ClothingNeckScarfStripedCentcom
+      - id: ClothingShoesBootsWinter
       - id: ClothingUniformJumpsuitCentcomOfficial
       - id: ClothingHandsGlovesColorBlack
       - id: ClothingEyesGlassesSunglasses
@@ -38,11 +29,11 @@
     contents:
       - id: CuttleryBox
       - id: FoodPresentableTinMRECaviar
-      - id: DeliciousPresentableRag
+      - id: PresentableRag
       - id: DrinkWaterBottleFull
       - id: FoodPresentableTinMRECaviar
         prob: 0.5
-      - id: DeliciousPresentableRag
+      - id: PresentableRag
         prob: 0.5
       - id: FoodPizzaGolden
         prob: 0.3
@@ -61,8 +52,6 @@
     state: icon
   - type: Item
     sprite: Imperial/TFG/Containers/toolboxShuttle.rsi
-  - type: Storage
-    capacity: 80
   - type: StorageFill
     contents:
       - id: ClothingEyesGlassesMeson
@@ -101,7 +90,8 @@
   - type: Item
     size: Small
   - type: Storage
-    capacity: 15
+    grid:
+    - 0,0,2,1
   - type: StorageFill
     contents:
       - id: EncryptionKeyCentCom
