--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -221,3 +221,9 @@ Observationskit: null
 
 # 2024-02-26
 CrateBaseWeldable: CrateGenericSteel
+
+# 2024-05-27 Imperial Space TFG works
+DeliciousPresentableRag: PresentableRag
+WinterBox: null
+ToughguysSpawner: ToughguysPlushieSpawner
+ClothingBackpackBackbow: ClothingBackpackMaidBackbow
