--- a/Resources/Prototypes/Imperial/TFG/Toughguys/plushie_spawner.yml
+++ b/Resources/Prototypes/Imperial/TFG/Toughguys/plushie_spawner.yml
@@ -1,7 +1,7 @@
 - type: entity
   name: Random Community Plushie Spawner
-  id: ToughguysSpawner
-  suffix: COMMUNITY_TOY
+  id: ToughguysPlushieSpawner
+  suffix: COMMUNITY,TOY
   parent: MarkerBase
   components:
     - type: Sprite
@@ -16,7 +16,7 @@
         - PlushieChemistGift
         - PlushieSOGift
         - PlushieIAAGift
-      rareChance: 0.25
+      rareChance: 0.15
       prototypes:
         - PlushieCapitan
         - PlushieChemist
@@ -32,5 +32,6 @@
         - PlushieBarmem
         - PlushieCoroner
         - PlushieIAA
-      chance: 0.65
+        - PlushieAdri
+      chance: 0.75
       offset: 0.10
