Космические медипены снова есть у экипажа!

--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -158,7 +158,7 @@ TransmitterSubspaceStockPart: null
 ClothingHeadHatHoodRad: null
 
 # 2024-01-12
-SpaceMedipen: null
+## SpaceMedipen: null Imperial
 
 # 2024-01-18
 ClothingHeadHelmetVoidParamed: null
