--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -227,3 +227,6 @@ DeliciousPresentableRag: PresentableRag
 WinterBox: null
 ToughguysSpawner: ToughguysPlushieSpawner
 ClothingBackpackBackbow: ClothingBackpackMaidBackbow
+
+# 2024-05-29 Imperial Space Brig med 1984
+ClothingEyesHudSecMedImperial: ClothingEyesHudMedSec
