--- a/Resources/Prototypes/Roles/Jobs/Security/brigmedic.yml
+++ b/Resources/Prototypes/Roles/Jobs/Security/brigmedic.yml
@@ -33,7 +33,7 @@
     back: ClothingBackpackBrigmedicFilled
     shoes: ClothingShoesBrigmedic
     gloves: ClothingHandsGlovesLatex
-    eyes: ClothingEyesHudSecMedImperial
+    eyes: ClothingEyesHudMedSec
     head: ClothingHeadHatBeretBrigmedic
     id: BrigmedicPDA
     ears: ClothingHeadsetBrigmedic
