Добавление доступов АВД

--- a/Resources/Prototypes/Imperial/IAA.yml
+++ b/Resources/Prototypes/Imperial/IAA.yml
@@ -38,6 +38,7 @@
     - Maintenance
     - Command
     - External
+    - Lawyer
   special:
   - !type:AddImplantSpecial
     implants: [ MindShieldImplant ]
