--- a/Resources/Prototypes/Datasets/tips.yml
+++ b/Resources/Prototypes/Datasets/tips.yml
@@ -67,7 +67,7 @@
     - "Будучи капитаном, всегда носите с собой диск ядерной аутентификации и поисковый навигатор. Неплохим вариантом будет передать один из них другому главе, которому вы можете доверить его сохранность."
     - "Будучи капитаном, вы имеете полный доступ и абсолютный контроль над станцией, но это не означает, что если вы будете себя ужасно вести, это не приведет к бунту."
     - "Будучи капитаном, старайтесь быть активным и патрулировать станцию. Сидеть на мостике может быть соблазнительно, но в итоге вы только привлечете к себе больше внимания!"
-    - "Будучи учёным, вы можете попробовать различные вещи с артфеактом, пока сканер перезаряжается, чтобы значительно ускорить процесс извлечения очков."
+    - "Будучи учёным, вы можете попробовать различные вещи с артефактом, пока сканер перезаряжается, чтобы значительно ускорить процесс извлечения очков."
     - "Будучи учёным, вы можете использовать детали машин получше для повышения эффективности машин. Это может сделать некоторые машины, такие как переработчик биомассы, значительно лучше!"
     - "Будучи учёным, вы можете попытаться угадать, что делает улучшение машины, исходя их того, какой компонент вы улучшаете. Ёмкости материи увеличивают возможности хранения, конденсаторы увеличивают эффективность, и манипуляторы увеличивают мощность."
     - "Будучи врачом, постарайтесь быть аккуратным с передозировкой пациентов, особенно если им уже оказали первую помощь. Передозировки могут быть летальны для пациентов в критическом состоянии!"
