Клоны наносят ответный удар (#190)

--- a/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
@@ -201,6 +201,9 @@
       - id: RubberStampCMO
       - id: MedicalTechFabCircuitboard
       - id: BoxEncryptionKeyMedical
+      - id: CloningPodMachineCircuitboard  # Imperial Space / Клоны наносят ответный удар. @KAZAK1984
+      - id: CloningConsoleComputerCircuitboard  # Imperial Space / Клоны наносят ответный удар. @KAZAK1984
+      - id: MedicalScannerMachineCircuitboard  # Imperial Space / Клоны наносят ответный удар. @KAZAK1984
 
 - type: entity
   id: LockerChiefMedicalOfficerFilled
@@ -221,6 +224,9 @@
       - id: RubberStampCMO
       - id: MedicalTechFabCircuitboard
       - id: BoxEncryptionKeyMedical
+      - id: CloningPodMachineCircuitboard  # Imperial Space / Клоны наносят ответный удар. @KAZAK1984
+      - id: CloningConsoleComputerCircuitboard  # Imperial Space / Клоны наносят ответный удар. @KAZAK1984
+      - id: MedicalScannerMachineCircuitboard  # Imperial Space / Клоны наносят ответный удар. @KAZAK1984
 
 - type: entity
   id: LockerResearchDirectorFilledHardsuit
