--- a/Resources/Prototypes/Imperial/HephaestusStation/decor.yml
+++ b/Resources/Prototypes/Imperial/HephaestusStation/decor.yml
@@ -5,7 +5,7 @@
   description: filler
   components:
   - type: Item
-    size: 5
+    size: Tiny
   - type: Sprite
     sprite: Imperial/HephaestusStation/Decor/decor.rsi
     layers:
@@ -18,7 +18,7 @@
   description: filler
   components:
   - type: Item
-    size: 5
+    size: Tiny
   - type: Sprite
     sprite: Imperial/HephaestusStation/Decor/decor.rsi
     layers:
@@ -31,7 +31,7 @@
   description: filler
   components:
   - type: Item
-    size: 5
+    size: Tiny
   - type: Sprite
     sprite: Imperial/HephaestusStation/Decor/decor.rsi
     layers:
@@ -44,7 +44,7 @@
   description: filler
   components:
   - type: Item
-    size: 5
+    size: Tiny
   - type: Sprite
     sprite: Imperial/HephaestusStation/Decor/decor.rsi
     layers:
@@ -57,7 +57,7 @@
   description: filler
   components:
   - type: Item
-    size: 5
+    size: Tiny
   - type: Sprite
     sprite: Imperial/HephaestusStation/Decor/decor.rsi
     layers:
@@ -70,7 +70,7 @@
   description: filler
   components:
   - type: Item
-    size: 5
+    size: Tiny
   - type: Sprite
     sprite: Imperial/HephaestusStation/Decor/decor.rsi
     layers:
@@ -83,7 +83,7 @@
   description: filler
   components:
   - type: Item
-    size: 5
+    size: Tiny
   - type: Sprite
     sprite: Imperial/HephaestusStation/Decor/decor.rsi
     layers:
