Pancakes stacks fix (#198)

--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/misc.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/misc.yml
@@ -265,7 +265,7 @@
   description: A fluffy and delicious blueberry pancake.
   components:
   - type: Stack
-    stackType: Pancake
+    stackType: PancakeBb #Imperial bugfix
     count: 1
     composite: true
     layerStates:
@@ -297,7 +297,7 @@
   description: A fluffy and delicious chocolate chip pancake.
   components:
   - type: Stack
-    stackType: Pancake
+    stackType: PancakeCc #Imperial bugfix
     count: 1
     composite: true
     layerStates:
