--- a/Resources/Prototypes/XenoArch/Effects/utility_effects.yml
+++ b/Resources/Prototypes/XenoArch/Effects/utility_effects.yml
@@ -198,10 +198,8 @@
     allowMovement: true
     allowSpeech: true
     makeSentient: true
-    name: sentient artifact
-    description: |
-      Enact your eldritch whims.
-      Forcibly activate your nodes for good or for evil.
+    name: ghost-role-information-syndicate-artifact-name # imperial
+    description: ghost-role-information-syndicate-monkey-reinforcement-description # imperial
   - type: GhostTakeoverAvailable
   - type: MovementSpeedModifier
     baseWalkSpeed: 0.25
