Diagonal Windows Fix (#219)
* CardBin fix

* Update mining.yml

* Update plasma.yml

* Update reinforced.yml

* Update rplasma.yml

* Update ruranium.yml

* Update shuttle.yml

* Update uranium.yml

* Update window.yml

--- a/Resources/Prototypes/Entities/Structures/Windows/mining.yml
+++ b/Resources/Prototypes/Entities/Structures/Windows/mining.yml
@@ -58,15 +58,20 @@
   placement:
     mode: SnapgridCenter
     snap:
-    - Window
+    - Wall
   components:
+  - type: Transform
+    anchored: true
   - type: Sprite
     drawdepth: WallTops
     sprite: Structures/Windows/mining_diagonal.rsi
     state: state0
+  - type: Tag
+    tags:
+    - Wall
   - type: IconSmooth
     mode: Diagonal
-    key: windows
+    key: walls
     base: state
   - type: Icon
     sprite: Structures/Windows/mining_diagonal.rsi
