--- a/Resources/Prototypes/Entities/Structures/Windows/uranium.yml
+++ b/Resources/Prototypes/Entities/Structures/Windows/uranium.yml
@@ -103,15 +103,20 @@
   placement:
     mode: SnapgridCenter
     snap:
-    - Window
+    - Wall
   components:
+  - type: Transform
+    anchored: true
   - type: Sprite
     drawdepth: WallTops
     sprite: Structures/Windows/uranium_window_diagonal.rsi
     state: state0
+  - type: Tag
+    tags:
+    - Wall
   - type: IconSmooth
     mode: Diagonal
-    key: windows
+    key: walls
     base: state
   - type: Icon
     sprite: Structures/Windows/uranium_window_diagonal.rsi
