--- a/Resources/Prototypes/Actions/types.yml
+++ b/Resources/Prototypes/Actions/types.yml
@@ -169,7 +169,7 @@
 
 - type: entity
   id: ActionToggleSuitPiece
-  name: Toggle Suit Piece
+  name: Переключить часть костюма #Imperial translate
   description: Remember to equip the important pieces of your suit before going into action.
   noSpawn: true
   components:
