increase the size of emergency boxes on 3 cells standardized brigmed emergency box fill

--- a/Resources/Prototypes/Imperial/mime/fills.yml
+++ b/Resources/Prototypes/Imperial/mime/fills.yml
@@ -13,6 +13,11 @@
       - id: EmergencyMedipen
       - id: Flare
       - id: FoodTinMRE
+  #Imperial emergency box size
+  - type: Storage
+    maxItemSize: Small
+    grid:
+    - 0,0,3,2
 
 - type: entity
   name: Mime box
