--- a/Resources/Prototypes/Catalog/Fills/Boxes/emergency.yml
+++ b/Resources/Prototypes/Catalog/Fills/Boxes/emergency.yml
@@ -8,7 +8,7 @@
     contents:
       - id: ClothingMaskBreath
       - id: EmergencyOxygenTankFilled
-      - id: SpaceMedipen
+      - id: SpaceMedipen #Imperial spaceMedipen add to surv boxes
       - id: EmergencyMedipen
       - id: Flare
       - id: FoodSnackNutribrick
@@ -17,6 +17,11 @@
     layers:
       - state: internals
       - state: emergencytank
+  #Imperial emergency box size
+  - type: Storage
+    maxItemSize: Small
+    grid:
+    - 0,0,3,2
 
 - type: entity
   name: extended-capacity survival box
@@ -29,7 +34,7 @@
       - id: ClothingMaskBreath
       - id: ExtendedEmergencyOxygenTankFilled
       - id: EmergencyMedipen
-      - id: SpaceMedipen
+      - id: SpaceMedipen #Imperial spaceMedipen add to surv boxes
       - id: Flare
       - id: FoodSnackNutribrick
       - id: DrinkWaterBottleFull
@@ -37,6 +42,11 @@
     layers:
       - state: internals
       - state: extendedtank
+  #Imperial emergency box size
+  - type: Storage
+    maxItemSize: Small
+    grid:
+    - 0,0,3,2
 
 - type: entity
   name: survival box
@@ -50,7 +60,7 @@
       - id: ClothingMaskGasSecurity
       - id: EmergencyOxygenTankFilled
       - id: EmergencyMedipen
-      - id: SpaceMedipen
+      - id: SpaceMedipen #Imperial spaceMedipen add to surv boxes
       - id: Flare
       - id: FoodSnackNutribrick
       - id: DrinkWaterBottleFull
@@ -58,6 +68,11 @@
     layers:
       - state: internals
       - state: emergencytank
+  #Imperial emergency box size
+  - type: Storage
+    maxItemSize: Small
+    grid:
+    - 0,0,3,2
 
 - type: entity
   name: survival box
@@ -79,6 +94,11 @@
     layers:
       - state: internals
       - state: emergencytank
+  #Imperial emergency box size
+  - type: Storage
+    maxItemSize: Small
+    grid:
+    - 0,0,3,2
 
 - type: entity
   name: box of hugs
@@ -98,13 +118,18 @@
       - id: ClothingMaskBreath
       - id: EmergencyFunnyOxygenTankFilled
       - id: EmergencyMedipen
-      - id: SpaceMedipen
+      - id: SpaceMedipen #Imperial spaceMedipen add to surv boxes
       - id: Flare
       - id: FoodSnackNutribrick
       - id: DrinkWaterBottleFull
   - type: Tag
     tags:
       - BoxHug
+  #Imperial emergency box size
+  - type: Storage
+    maxItemSize: Small
+    grid:
+    - 0,0,3,2
 
 - type: entity
   name: extended-capacity survival box
@@ -117,10 +142,15 @@
       - id: ClothingMaskGasSyndicate
       - id: ExtendedEmergencyOxygenTankFilled
       - id: EmergencyMedipen
-      - id: SpaceMedipen
+      - id: SpaceMedipen #Imperial spaceMedipen add to surv boxes
       - id: Flare
       - id: FoodSnackNutribrick
   - type: Sprite
     layers:
       - state: internals
       - state: extendedtank
+  #Imperial emergency box size
+  - type: Storage
+    maxItemSize: Small
+    grid:
+    - 0,0,3,2
