--- a/Resources/Prototypes/Imperial/brigmedic.yml
+++ b/Resources/Prototypes/Imperial/brigmedic.yml
@@ -21,8 +21,15 @@
       - id: EmergencyOxygenTankFilled
       - id: EmergencyMedipen
       - id: EmergencyMedipen
-      - id: FoodTinMRE
+      - id: SpaceMedipen
+      - id: Flare
+      - id: FoodSnackNutribrick
+      - id: DrinkWaterBottleFull
   - type: Sprite
     layers:
       - state: internals
       - state: emergencytank
+  - type: Storage
+    maxItemSize: Small
+    grid:
+    - 0,0,3,2
