Чистка кода набора "АКМС" и его баланс (#230)
* Solution

* 22 TK, 16 TK

--- a/Resources/Prototypes/Catalog/Fills/Backpacks/duffelbag.yml
+++ b/Resources/Prototypes/Catalog/Fills/Backpacks/duffelbag.yml
@@ -143,6 +143,8 @@
         amount: 4
       - id: MagazineLightRifleBox
         amount: 2
+      - id: MagazineLightRifle #Imperial balance
+        amount: 4 #Imperial Balance
 
 - type: entity
   parent: ClothingBackpackDuffel
