--- a/Resources/Prototypes/Imperial/BundleAKMS/duffelbag.yml
+++ b/Resources/Prototypes/Imperial/BundleAKMS/duffelbag.yml
@@ -2,11 +2,11 @@
 - type: entity
   parent: ClothingBackpackDuffelSyndicateBundle
   id: ClothingBackpackDuffelSyndicateAKMS
-  name: AKMS bundle
+  name: "AKMS" bundle
   description: "Old faithful: The classic AKMS, bundled with four magazines." 
   components:
   - type: StorageFill
     contents:
       - id: WeaponRifleAk
       - id: MagazineLightRifle
-        amount: 3
+        amount: 2
