fix AKMS bundle proto name

--- a/Resources/Prototypes/Imperial/BundleAKMS/duffelbag.yml
+++ b/Resources/Prototypes/Imperial/BundleAKMS/duffelbag.yml
@@ -2,8 +2,8 @@
 - type: entity
   parent: ClothingBackpackDuffelSyndicateBundle
   id: ClothingBackpackDuffelSyndicateAKMS
-  name: "AKMS" bundle
-  description: "Old faithful: The classic AKMS, bundled with four magazines." 
+  name: AKMS bundle
+  description: "Old faithful: The classic AKMS, bundled with four magazines."
   components:
   - type: StorageFill
     contents:
