Gold toilet fix (#247)
* CardBin fix

* Update mining.yml

* Update plasma.yml

* Update reinforced.yml

* Update rplasma.yml

* Update ruranium.yml

* Update shuttle.yml

* Update uranium.yml

* Update window.yml

* Delete Resources/Prototypes/Imperial/brigmedic.yml

* Add files via upload

* Update backpacks.yml

* Update duffel.yml

* Update satchel.yml

* Update bedsheets.yml

* Delete Resources/Prototypes/Roles/Jobs/Security/brigmedic.yml

* Update misc_startinggear.yml

* Update hardsuit-helmets.yml

* Update hardsuits.yml

* Update headsets.yml

* Update pda.yml

* Update identification_cards.yml

* Update lockers.yml

* Update security.yml

* Update jobs.yml

* Update imperial_furniture.yml

--- a/Resources/Prototypes/Imperial/GlassTables/imperial_furniture.yml
+++ b/Resources/Prototypes/Imperial/GlassTables/imperial_furniture.yml
@@ -52,7 +52,7 @@
 - type: construction
   name: золотой туалет
   id: GoldToilet
-  graph: GoldToilet
+  graph: GoldToiletGraph
   startNode: start
   targetNode: goldtoilet
   category: construction-category-furniture
