--- a/Resources/Prototypes/Imperial/Brigmedic/brigmedicgearpreset.yml
+++ b/Resources/Prototypes/Imperial/Brigmedic/brigmedicgearpreset.yml
@@ -37,7 +37,6 @@
     head: ClothingHeadHatBeretBrigmedic
     id: BrigmedicPDA
     ears: ClothingHeadsetBrigmedic
-    mask: ClothingMaskRebreatherBrigmedic
     belt: ClothingBeltMilitaryWebbingBrigmedFilled
   innerclothingskirt: ClothingUniformJumpskirtBrigmedicNew
   satchel: ClothingBackpackSatchelBrigmedicFilled
@@ -60,3 +59,6 @@
   innerClothingSkirt: ClothingUniformJumpskirtBrigmedic
   satchel: ClothingBackpackSatchelBrigmedicFilled
   duffelbag: ClothingBackpackDuffelBrigmedicFilled
+
+- type: playTimeTracker
+  id: JobBrigmedic
