--- a/Resources/Prototypes/Imperial/BundleAKMS/uplink_catalog.yml
+++ b/Resources/Prototypes/Imperial/BundleAKMS/uplink_catalog.yml
@@ -7,7 +7,7 @@
   cost:
     Telecrystal: 22
   categories:
-  - UplinkBundles
+  - UplinkWeaponry
   conditions:
    - !type:StoreWhitelistCondition
      whitelist:
