--- a/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
@@ -104,6 +104,10 @@
       - id: RubberStampCaptain
       - id: JetpackCaptainFilled
       - id: MedalCase
+      - id: ClothingHeadHatCapcap
+      - id: ControlModsuitMagnate #Edited in Imperial Space by @sentryprimies in the name of modsuits
+      - id: ClothingUniformJumpsuitCaptainAlt #ImperialClothes Водолазки капитана
+      - id: ClothingUniformJumpskirtCaptainAlt #ImperialClothes Водолазки капитана
 
 - type: entity
   id: LockerHeadOfPersonnelFilled
