--- a/Resources/Prototypes/Imperial/MiniCrossbow/uplink_catalog.yml
+++ b/Resources/Prototypes/Imperial/MiniCrossbow/uplink_catalog.yml
@@ -7,7 +7,7 @@
   cost:
     Telecrystal: 8
   categories:
-  - UplinkWeapons
+  - UplinkWeaponry
   conditions:
     - !type:StoreWhitelistCondition
       blacklist:
