--- a/Resources/Prototypes/Imperial/Modsuits/misc.yml
+++ b/Resources/Prototypes/Imperial/Modsuits/misc.yml
@@ -6,7 +6,7 @@
   cost:
     Telecrystal: 8
   categories:
-    - UplinkArmor
+    - UplinkWearables
   conditions:
     - !type:StoreWhitelistCondition
       blacklist:
@@ -21,7 +21,7 @@
   cost:
     Telecrystal: 30
   categories:
-    - UplinkArmor
+    - UplinkWearables
   conditions:
     - !type:StoreWhitelistCondition
       blacklist:
@@ -36,7 +36,7 @@
   cost:
     Telecrystal: 14
   categories:
-    - UplinkArmor
+    - UplinkWearables
   conditions:
   - !type:StoreWhitelistCondition
     whitelist:
@@ -75,5 +75,5 @@
       - ClothingControlModsuitCivillianSealed
     chance: 0.7
     rarePrototypes:
-      - ClothingControlModsuitMinerSealed 
+      - ClothingControlModsuitMinerSealed
     rareChance: 0.3
