В чём же заключается суть Hephaestus Station (#269)

--- a/Resources/Prototypes/Imperial/HephaestusStation/decals.yml
+++ b/Resources/Prototypes/Imperial/HephaestusStation/decals.yml
@@ -404,3 +404,60 @@
   sprite:
     sprite: Imperial/HephaestusStation/Decals/trimlinearrow.rsi
     state: line_w
+
+##TECH LINE
+- type: decal
+  id: TechLineImperialCornerNe
+  tags: ["station"]
+  sprite:
+    sprite: Imperial/HephaestusStation/Decals/techline.rsi
+    state: corner_ne
+
+- type: decal
+  id: TechLineImperialCornerNw
+  tags: ["station"]
+  sprite:
+    sprite: Imperial/HephaestusStation/Decals/techline.rsi
+    state: corner_nw
+
+- type: decal
+  id: TechLineImperialCornerSe
+  tags: ["station"]
+  sprite:
+    sprite: Imperial/HephaestusStation/Decals/techline.rsi
+    state: corner_se
+
+- type: decal
+  id: TechLineImperialCornerSw
+  tags: ["station"]
+  sprite:
+    sprite: Imperial/HephaestusStation/Decals/techline.rsi
+    state: corner_sw
+
+- type: decal
+  id: TechLineImperialLineE
+  tags: ["station"]
+  sprite:
+    sprite: Imperial/HephaestusStation/Decals/techline.rsi
+    state: line_e
+
+- type: decal
+  id: TechLineImperialLineN
+  tags: ["station"]
+  sprite:
+    sprite: Imperial/HephaestusStation/Decals/techline.rsi
+    state: line_n
+
+- type: decal
+  id: TechLineImperialLineS
+  tags: ["station"]
+  sprite:
+    sprite: Imperial/HephaestusStation/Decals/techline.rsi
+    state: line_s
+
+- type: decal
+  id: TechLineImperialLineW
+  tags: ["station"]
+  sprite:
+    sprite: Imperial/HephaestusStation/Decals/techline.rsi
+    state: line_w
